Fixed alignment of small images in figures

--- a/src/templates/assets/stylesheets/main/_typeset.scss
+++ b/src/templates/assets/stylesheets/main/_typeset.scss
@@ -408,6 +408,7 @@ kbd {
     // Figure images
     img {
       display: block;
+      margin: 0 auto;
     }
   }
 
